assets/css/style.css
/* ... */
  
  /* Position the "next button" to the right */
  .next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }
  
  /* On hover, add a black background color with a little bit see-through */
  .prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
  }

/*  #dot-box {
      
      position:absolute;
      top:113px;
      left:5px;
  }*/
  
  /* Caption text */
  .text {
    color:red;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;

  }
  
  /* Number text (1/3 etc) */
  .numbertext {
    color: rgb(76, 13, 223);
    font-size: 20px;
    padding: 8px 12px 8px 45px;
    position: absolute;
    top: 0;
  }
  
  /* The dots/bullets/indicators */
  .dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: none;
    transition: background-color 0.6s ease;
  }
  
  .active, .dot:hover {
    background-color: #717171;
  }
  
  /* Fading animation */
  .fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
  }
  
  @-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
  }
  
  @keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
  }


/***********************************footer styles************************************************************/

footer {
    grid-area: foot;
    position:fixed;
    bottom:0;
    left:0;
    width:100vw;
    max-height:45px;
    background-color: var(--snow);   
}

.social-networks {
    text-align:center;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-evenly;
}

.social-networks li {
    display:inline;
    padding-bottom:25%;
}

.social-networks i {
    font-size:300%;
    padding:5%;
    color:var(--antarcticblue);
}


/******************************links styles*************************************/
#links-container {
    width:100%;
    align-items: center;
    display:flex;
    flex-basis:auto;
    flex-direction: column;
    flex-wrap: nowrap;
    position: absolute;
    top:149px;
    left:0;
    grid-area: links;
    align-items: center;
}

#vid-box {
    width:100vw;
}

#vid-box1 {
    display:flex;
    flex-direction: column;
}

#vid-box2 {
    display:flex;
    flex-direction: column;
}

#vid-box1 h1, #vid-box2 h1, #wiki-link h1 {
    font-size: 1.2rem;
    text-align: center;
    padding-bottom: 1%;
    color:white;
    background-color:var(--antarcticblue);
    opacity:1;
    width:100vw;
}

#vid-box1 iframe {
    width:100vw;
}

#wiki-link {
    margin-top:15px;
    display:flex;
    align-content: center;
    flex-direction:column;

}

#wiki-link h3 {
    text-align: center;
    background-color: var(--antarcticblue);
    width:100vw;
    color:var(--snow);
}

#wiki-link i {
    font-size: 3rem;
    color:var(--snow);
    padding: 0 45% 0 35%;
    background-color: var(--antarcticblue);
    width:100vw;
}

#cform {
    background-color: var(--antarcticblue);
    font-size: 1.3rem;
    margin-top:15px;
    width:100vw;
}

#cform h1 {
    font-size: 1.2rem;
    text-align: center;
    padding-bottom: 1%;
    color:white;
    background-color:var(--antarcticblue);
    opacity:1;
}

#cform form input {
    float:right;
    margin-left: 5%;
}

#cform form label {
    color:var(--snow);
    position:relative;
    top:-5px;
    left:4%;
}

#submit {
    float:none;
    color:var(--snow);
    padding:0;
    margin:0 auto;
    background-color: var(--antarcticblue);
    border :1px solid var(--snow);
    margin-left:40%;
    position:relative;
    left:-40%;
}
/**************************end of links page styles**********************/

/*============================================================================================*/
/*============================================================================================*/
/*===============================screens below 320px==============================================================*/
@media screen and (max-width:320px){
    #nav-bar  {
        display:none;
    }

    #grid-wrapper {
        top:150px;
    }

    #bluffers-section {
        top:150px;
        height: 150vh;
    }

    #links-container {
        top:150px;
    } 
}

/*=========================screens above 375px===========*/

@media screen and (min-width:375px) {
    .mobile-nav a {
        margin-left:80px;
    }

    #center-about {
        position:relative;
        left:75%;
    }
}

/*=========================screens above 576px===============*/
@media screen and (min-width:576px) {
    #bluffers-section {
        height:75vh;
    }

    #grid-wrapper {
        position:relative;
        top:150px;
        left:0;    
        width:100%;
        height:100%;
        display:grid;
        grid-template-columns: repeat(8, 1fr);
        grid-template-rows: repeat(10, minmax(220px, auto));
        grid-template-areas: 
        "text1  text1 text1 text1 text1 text1 text1 text1"
        "image1  image1 image1 image1 image1 image1 image1 image1"
        "image1  image1 image1 image1 image1 image1 image1 image1"
        "text2  text2 text2 text2 text2 text2 text2 text2"
        "image2  image2 image2 image2 image2 image2 image2 image2 "
        "image2  image2 image2 image2 image2 image2 image2 image2 "
        "text3  text3 text3 text3 text3 text3 text3 text3"
        "text4  text4 text4 text4 text4 text4 text4 text4"
        "text5  text5 text5 text5 text5 text5 text5 text5"
        "image3 image3 image3 image3 image3 image3 image3 image3"
        ;
        grid-area: main-texts;
    }

    .vid1 iframe {
        height:300px;
    }
}
/* ... */

